--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,16 +1,29 @@
-.header {
+.header  {
     width: 100%;
     max-width: 1440px;
-    min-width: 280px;
     padding: 32px;
     margin: 0 auto;
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     padding: 32px 10px;
     font-size: 24px;
+    justify-content: space-between;
+}
+
+nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: flex-end;
     gap: 20px;
 }
+nav svg {
+    fill: var(--secondary);
+    width: 100%;
+    min-width: 150px;
+}
+
 
 .header svg {
     fill: var(--secondary);
@@ -18,12 +31,9 @@
     min-width: 150px;
 }
 
-.header nav {
-    margin-left: auto;
+.header  {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    gap: 15px;
+    justify-content: wrap;
     font-size: 24px;
 }
 
