--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,24 +1,81 @@
-.banner {
+.banner img {
     width: 100%;
     max-width: 1240px;
-    margin: 0 auto;
     height: 223px;
-    padding: 10px;
+    padding: 5px;
     color: var(--primary);
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    border-radius: 25px ;
-    -webkit-border-radius: 25px ;
-    -moz-border-radius: 25px ;
-    -ms-border-radius: 25px ;
-    -o-border-radius: 25px ;
     position: relative;
-    z-index: 1;
+    opacity:70%;
+    z-index: -1;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
 }
 
-.banner h1 {
+.sentence {
+    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 15px;
+    height: 223px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     font-size: 48px;
     font-weight: normal;
     color: var(--primary);
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center right;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    fill-opacity: 1;
+    object-fit: cover;
+    opacity: 3.5;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+}
+
+@media all and (min-width: 450px)
+{
+    .banner img {
+        width: 100%;
+        max-width: 1240px;
+        margin: 0 auto;
+        height: 223px;
+        padding: 5px;
+        color: var(--primary);
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        opacity:70%;
+        z-index: -1;
+        border-radius: 25px;
+        -webkit-border-radius: 25px;
+        -moz-border-radius: 25px;
+        -ms-border-radius: 25px;
+        -o-border-radius: 25px;
+    }
+    .sentence {
+        width: 100%;
+        
+    }
 }
