--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -1,4 +1,73 @@
-.carrouselBgImg {
+.carousel {
     width: 100%;
-    height: 415px;
+    height: 350px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 25px;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
 }
+
+.figure {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.images {
+    min-width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.previous {
+    background: transparent;
+    border: none;
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    filter: drop-shadow(0 0 1px #000);
+    -webkit-filter: drop-shadow(0 0 1px #000);
+    z-index: 2;
+}
+
+.next {
+    background: transparent;
+    border: none;
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    filter: drop-shadow(0 0 1px #000);
+    z-index: 2;
+}
+
+.positionImage {
+    color: var(--primary);
+    z-index: 2;
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    filter: drop-shadow(0 0 1px #000);
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+
+.positionImage span {
+    color: var(--primary);
+}
+
+.carousel button {
+    height: calc(1.6rem + 2.5vw);
+}
+
+.arrows {
+    width: 100%;
+    height: 100%;
+}
+
