--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,7 +2,6 @@
     margin-top: auto;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 0;
     width: 100%;
     max-width: 1440px;
     background: var(--bgFooter);
@@ -21,6 +20,34 @@
     min-width: 150px;
 }
 
-.footer svg, .footer p {
+.footer svg, .footer div {
     color: var(--primary);
+}
+
+@media all and (max-width: 650px) {
+    .footer {
+        margin-top: auto;
+        margin-left: auto;
+        margin-right: auto;
+        bottom: 0;
+        width: 100%;
+        max-width: 1440px;
+        background: var(--bgFooter);
+        padding: 32px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        text-align: center;
+        font-size: 24px;
+    }
+    
+    .footer svg div {
+        fill : var(--primary);
+        text-align: center;
+        width: 100%;
+        min-width: 150px;
+    }
+
+
+    
 }
