--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,6 +11,7 @@
 }
 
 nav {
+    margin-right: -10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
@@ -28,6 +29,7 @@ nav svg {
     fill: var(--secondary);
     width: 100%;
     min-width: 150px;
+    margin-left: -10px;
 }
 
 .header  {
@@ -40,8 +42,33 @@ nav svg {
     text-decoration: none;
     display: inline-block;
     color: var(--secondary);
+    
 }
 
 .activeLink {
     text-decoration: underline;
+}
+
+.header svg {
+    width: 100%;
+    height: 100%;;
+}
+
+@media all and (max-width: 650px) {
+    nav {
+        margin-right: -10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+        align-items: flex-end;
+        gap: 20px;
+    }
+    
+    .header svg {
+        fill: var(--secondary);
+        width: 100%;
+        min-width: 150px;
+        margin-left: -10px;
+    }
+    
 }
