--- a/src/components/Host/Host.module.css
+++ b/src/components/Host/Host.module.css
@@ -1,18 +1,12 @@
-.hostContainer {
-    display: flex;
-    gap: 10px;
-    align-items: flex-start;
-    justify-content: space-between;
-}
 
-.host {
+
+.host  {
     width: 100%;
-    max-width: 1240px;
-    margin:25px auto;
     display: flex;
-    gap: 10px;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
+    gap: 10px;
 }
 
 .host h3
@@ -20,14 +14,13 @@
     font-weight: normal;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    flex-grow: 1;
     line-height: 1.6;
 }
 
 .host img {
+    width:64px;
+    height: 64px;
     min-width: 50px;
-    height: 50px;
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
@@ -35,9 +28,9 @@
     -o-border-radius: 50%;
 }
 
-@media all and (min-width: 650px) { 
+@media all and (max-width: 650px) { 
     .host img {
-        width: 75px;
-        height: 75px;
+        width:55px;
+        height: 55px;
     }
 }
