--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -19,7 +19,9 @@
 
 html, body, #root {
     width: 100%;
-    height: 100%;}
+    height: 100%;
+    
+}
 
 
 .container {
@@ -37,5 +39,25 @@ main {
     display: flex;
     flex-direction: column;
     padding: 0 10px;
+    height: auto;
+}
+
+@media screen and (max-width: 650px) {
+    html, body, #root {
+        width: 100%;
+        height: 100%;
+        
+    }
+    .container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+    }
+
+    main {
+        width: 100%;
+        height: auto;        ;
+    }
 }
 
