--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -1,11 +1,40 @@
-
+main {
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    padding: 0 5px;
+}
 
 .about {
-    width: 80%;
-    min-width: 260px;
-    margin: 15px auto;
-    padding: 32px 0;
+    width: 100%;
+    max-width: 1240px;
+    margin-top: 30px;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 20px 0;
     display: flex;
     flex-direction: column;
-    gap: 32px;
+    gap: 30px;
+}
+
+@media all and (max-width: 650px) {
+    main {
+        width: auto;
+        height: auto;
+        margin: 0 auto;
+        padding: 0 5px;
+    }
+    
+    .about {
+        width: 100%;
+        max-width: 1240px;
+        margin-top: 30px;
+        margin-right: auto;
+        margin-left: auto;
+        padding: 20px 0;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
+    
 }
