--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -42,7 +42,7 @@
 img {
     width: 100%;
     max-width: 1240px;
-    height: 100%;
+    /* height: 100%; */
     background-size: cover;
     object-fit: cover;
     border-radius: 25px;
@@ -59,6 +59,19 @@ img {
         .sentence {
             padding-right: 75px;
             padding-left: 15px;
+        }
+        img {
+            width: 100%;
+            max-width: 1240px;
+            height: 100%;
+            background-size: cover;
+            object-fit: cover;
+            border-radius: 25px;
+            opacity: 1.0;
+            -webkit-border-radius: 25px;
+            -moz-border-radius: 25px;
+            -ms-border-radius: 25px;
+            -o-border-radius: 25px;
         }
     }
 
