--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -20,7 +20,7 @@
 
 .images {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     min-width: 100%;
     object-fit: cover;
 }
@@ -70,5 +70,14 @@
 .arrows {
     width: 100%;
     height: 100%;
+}
+
+@media all and (max-width: 650px) {
+    .images {
+        width: 100%;
+        height: 100%;
+        min-width: 100%;
+        object-fit: cover;
+    }
 }
 
